# icm20948_driver

./: CMakeLists.txt  package.xml
launch/: icm20948.launch
src/: icm20948.py  mag_marker_publisher.py
tools/: calibrate.py  calibration.yaml  convert.py  estimate-calibration-coeff.py  imu-csv.py  imu.csv  on_top_of_vehicle.yaml  plot-calibration.py  speed-test.py
