<?xml version="1.0"?>
<package format="2">
  <name>icm20948</name>
  <version>0.0.0</version>
  <description>The icm20948 package</description>
  <maintainer email="josh@autonabit.nz">Josh McCulloch</maintainer>
  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/icm20948</url> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
