<?xml version="1.0"?>
<package format="2">
  <name>icm20948_driver</name>
  <version>0.0.0</version>
  <description>ROS driver for the icm20948 IMU</description>
  <maintainer email="josh@autonabit.nz">Josh McCulloch</maintainer>
  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/icm20948</url> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
